--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": "git://github.com/dawanda/node-imageable.git"
   },
   "scripts": {
-    "test": "vows test/*.test.js"
+    "test": "vows test/*.test.js",
+    "buster-test": "node_modules/.bin/buster-test"
   },
   "engines": {
     "node": ">=v0.4.7"
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "mocha": "0.10.x",
-    "should": "0.5.1"
+    "should": "0.5.1",
+    "buster": "~0.6.2"
   }
 }
